UI Components, Symbol: Fixing Disabled Contrast #27290

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -10345,7 +10345,7 @@ footer {
   filter: brightness(0);
 }
 .icon.outlined.disabled {
-  filter: brightness(0.3);
+  filter: contrast(0%);
 }
 .icon.outlined.grp {
   background-image: url("images/outlined/icon_grp.svg");
